# groster

./: .coderabbit.yaml  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  defaults.mk  groster.code-workspace  pyproject.toml  register_command.py
.cursor/: mcp.json
.cursor/rules/: always-enable-context7.mdc  dependency-management.mdc  python-standards.mdc  testing-guidelines.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: architect.agent.md  coder.agent.md  planner.agent.md  tester.agent.md
.github/instructions/: code-review.instructions.md  python-standards.instructions.md  testing.instructions.md  writing.instructions.md
.github/prompts/: implement.prompt.md  make-plan.prompt.md  pr.prompt.md  specify.prompt.md  test-this.prompt.md
.github/skills/.github/: copilot-instructions.md
.github/skills/.github/agents/: confluence-docs.agent.md  nodejs-re.agent.md  php-re.agent.md  writer.agent.md
.github/skills/.github/instructions/: confluence-docs.instruction.md  php-signnow.instructions.md  pytest-testing.instructions.md  use-npm.instructions.md  writing.instructions.md
.github/skills/.github/prompts/: confluence-docs.prompt.md  doc.prompt.md  init-agents-md.prompt.md  jira-task.prompt.md  plan.prompt.md  test.prompt.md
.github/skills/.github/skills/init-copilot/: SKILL.md
.github/skills/.github/skills/init-copilot/references/: artifact-catalog.md
.github/skills/.github/skills/init-copilot/scripts/: detect-stack.sh  fetch-artifact.sh  install-artifacts.sh  verify-setup.sh
.github/skills/.github/skills/jira-syntax/: SKILL.md
.github/skills/commit-history/: SKILL.md
.github/skills/commit-history/references/: REFERENCE.md  templates.md
.github/skills/creating-pr/: SKILL.md
.github/skills/git-commit/: SKILL.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  dependabot-merge.yml
apps/cli/: entry.py  main.py  repository.py  utils.py
apps/discord_bot/: __main__.py  main.py
docs/: architecture.md  coding-standards.md  deploy-local-server.md  docker.md  getting-started-localhost.md  groster-dashboard.json  logging-grafana-loki.md
groster/: __init__.py  __main__.py  characters.py  cli.py  constants.py  http_client.py  logging.py  main.py  models.py  services.py  utils.py
groster/commands/: __init__.py  bot.py  discord.py  roster.py
groster/repository/: __init__.py  base.py  csv.py  memory.py
scripts/: diff_alts.py  docker-smoke-test.sh  generate_context.py
tests/: conftest.py
tests/manual/: all.ipynb  client.ipynb  service.ipynb  services.ipynb
tests/unit/: test_commands_bot.py  test_commands_roster.py  test_constants.py  test_http_client.py  test_repository_csv.py  test_repository_dashboard.py  test_services.py  test_utils.py
